--- a/MedsTracker2/app/src/main/res/layout/fragment_edit_drug.xml
+++ b/MedsTracker2/app/src/main/res/layout/fragment_edit_drug.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#FFFFFF"
-        tools:context="com.example.cdu.medstracker.CreateDrugFragment"
+        tools:context="com.example.cdu.medstracker.EditDrugFragment"
         android:columnCount="2"
         android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
