--- a/MedsTracker2/app/src/main/res/layout/drugs_list_settings_layout.xml
+++ b/MedsTracker2/app/src/main/res/layout/drugs_list_settings_layout.xml
@@ -10,8 +10,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:padding="10dp"
+        android:layout_height="@dimen/settings_button_height"
+        android:padding="@dimen/setting_button_padding"
         android:background="@drawable/rectangle"
         android:orientation="horizontal">
 
@@ -23,8 +23,8 @@
                 app:srcCompat="@drawable/ic_color_lens_black_24dp"/>
 
             <Space
-                android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:layout_width="@dimen/zero_dp"
+                android:layout_height="@dimen/zero_dp"
                 android:layout_weight="1"/>
 
         <LinearLayout
@@ -37,7 +37,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:textAlignment="center"
-                android:text="Card Color"
+                android:text="@string/settings_button_header"
                 android:textColor="@color/textColor"
                 android:textStyle="bold"
                 android:textSize="@dimen/cardview_header_text_size" />
@@ -49,15 +49,15 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:textAlignment="center"
-                android:text="For Drugs and Phone list"
+                android:text="@string/settings_button_details"
                 android:textColor="@color/textColor"
                 android:textStyle="normal"
                 android:textSize="@dimen/cardview_text_size" />
             </LinearLayout>
 
         <Space
-            android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_width="@dimen/zero_dp"
+            android:layout_height="@dimen/zero_dp"
             android:layout_weight="5"/>
     </LinearLayout>
 
